--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "babel-runtime": "^6.20.0",
     "core-decorators": "^0.19.0",
     "meteor-node-stubs": "~0.2.4",
+    "node-twitter-api": "^1.8.0",
+    "passport-twitter": "^1.0.4",
+    "promise": "^8.0.1",
     "react": "^15.6.1",
     "react-addons-pure-render-mixin": "^15.6.0",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
     "react-router": "3.0.2",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "twitter": "^1.7.1"
   },
   "devDependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4"
